...
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="#756D6D"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:singleLine="true" />

...
            app:boxStrokeColor="@color/design_default_color_secondary"
            app:hintTextColor="#756D6D"
            app:endIconMode="clear_text"
            app:boxStrokeWidthFocused="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:inputType = "date"/>

...
            android:text="@string/choose_gender"
            android:fontFamily="@font/muli"
            android:textColor="@color/purple_700"
            />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/chooseGender"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:dropDownWidth="wrap_content">
        </androidx.appcompat.widget.AppCompatSpinner>

...
                app:boxStrokeColor="@color/design_default_color_secondary"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:hintTextColor="#756D6D">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editWeight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <ToggleButton
                android:id="@+id/weightUnitSwitch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/editWeightLayout"
                android:checkable="true">

...
                app:boxStrokeColor="@color/design_default_color_secondary"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:hintTextColor="#756D6D">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editHeight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />

...
                android:checkable="true"
                android:gravity="center"
                 />
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:elevation="10dp"
            android:fontFamily="@font/muli"
...
