<resources>
    <string name="app_name">Fitnics</string>

    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="username">Username</string>
    <string name="fatalError">Fatal Error</string>
    <string name="warning">Warning</string>
    <string name="next">Next</string>
    <string name="next_page">Next Page</string>
    <string name="enter_a_username">Enter a Username</string>
    <string name="example">example</string>
    <string name="enter_date_of_birth">Enter Date of Birth</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="enter_weight_in_lbs">Enter Weight</string>
    <string name="_165_24">165.24</string>
    <string name="enter_height_in_cm">Enter Height</string>
    <string name="_172_72">172.72</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="not_active">Not Active: you do not workout or do phisical activity during a standard week</string>
    <string name="very_active">Very Active: you workout or do physical activity more then 4 days during a standard week</string>
    <string name="somewhat_active">Somewhat Active: you workout or do physical activity 1–2 days during a standard week</string>
    <string name="active">Active: you workout or do physical activity 2–4 days during a standard week</string>
    <string name="not_activebtn">Not Active</string>
    <string name="somewhat_activebtn">Somewhat Active</string>
    <string name="activebtn">Active</string>
    <string name="very_activebtn">Very Active</string>
    <string-array name="Genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="weightUnits">
        <item>lbs</item>
        <item>kg</item>
    </string-array>
    <string-array name="heightUnits">
        <item>cm</item>
        <item>ft</item>
    </string-array>
    <string-array name="activityLevels">
        <item>Not Active</item>
        <item>Somewhat Active</item>
        <item>Active</item>
        <item>Very Active</item>
    </string-array>
    <string-array name="goals">
        <item>Lose Weight</item>
        <item>Maintain Weight</item>
        <item>Gain Weight</item>
    </string-array>
    <string name="greeting">Welcome, </string>
    <string name="caloriesRemaining">Calories Remaining</string>
    <string name="food">Food</string>
    <string name="exercise">Exercise</string>
    <string name="goal">Goal: </string>
    <string name="remaining">Remaining: </string>
    <string name="searchFood">Search Food</string>
    <string name="foodLog">Food Log</string>
    <string name="searchExercise">Search Exercise</string>
    <string name="exerciseLog">Exercise Log</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="zero">0</string>
    <string name="search" />

    <string name="searchExerciseHint">Search Exercise</string>
    <string name="goal_lose_weight">Lose Weight</string>
    <string name="goal_maintain_weight">Maintain Weight  </string>
    <string name="goal_gain_weight">Gain Weight  </string>
    <string name="breakfast_button_text">Add breakfast</string>
    <string name="add_exercise_button">Add exercise</string>
    <string name="add_dinner_btn_text">Add dinner</string>
    <string name="add_exercise_btn_text">Add exercise</string>
    <string name="add_lunch_btn_text">Add lunch</string>
    <string name="info_alert">Information</string>
    <string name="update">UPDATE</string>
    <string name="notification_note">You can set times when you want to be notified with our app. This will help you to follow your routine and hence easier to achieve goals</string>
    <string name="notification_btn_text">Set Notification</string>
    <string name="ex_description">Description</string>
    <string name="ex_category">Category</string>
    <string name="ex_level">Level</string>
    <string name="default_grams_consumed">1</string>
    <string name="title_activity_create_notification">CreateNotificationActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_individual_notification">IndividualNotification</string>
</resources>