...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/foodGrams"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:padding="10dp"
                    android:inputType="number"
                    android:singleLine="true"
...
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_task_24"
        app:layout_anchor="@id/LogDetailAppBar"
        app:layout_anchorGravity="bottom|end|right"
        app:fabSize="auto" />
...
